--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Styles CSS-->
-    <link rel="stylesheet" href="/src/css/styles.css">        <!--Standar Styles-->
-    <link rel="stylesheet" href="/src/css/styles-loader.css"> <!--Preloader Styles-->
-    <link rel="stylesheet" href="/src/css/alertify.min.css" /><!--AlertifyJS Styles-->
-    <link rel="shortcut icon" href="/src/img/icon_logo.png">
+    <link rel="stylesheet" href="src/css/styles.css">        <!--Standar Styles-->
+    <link rel="stylesheet" href="src/css/styles-loader.css"> <!--Preloader Styles-->
+    <link rel="stylesheet" href="src/css/alertify.min.css" /><!--AlertifyJS Styles-->
+    <link rel="shortcut icon" href="src/img/icon_logo.png">
     <!--Scripts JS-->
     <script src="/src/js/loader.js" defer></script>           <!--Preloader JS-->
     <script src="/src/js/particles-config.js" defer></script> <!--Particles JS-->
