--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                             </div>
                             <!-- CARD 2 -->
                             <div class="card">
-                                <img src="/src/img/WebInventory.png" alt="Picture">
+                                <img src="src/img/WebInventory.png" alt="Picture">
                                 <div class="card_details">
                                     <div class="title_card">
                                         <h3>Web Inventory</h3>
